Resolves tdf#156685 - "Object without fill" style for tables

The "Default Drawing Style" uses Tango Sky Blue for the background,
which is treated as dark since commit
Ia5e405fc05613726b5011174c8d00ca204eb31b2. This ends up in unreadable
white font color on white backgrounds for tables. The new style
"Object without fill" has a clear background.

Change-Id: I6b2f701e4a8cce6200fd2a5e86037e9a36b32833
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157568
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>